# mulmodel

./: .gitignore  MEMORY.md  README.md  SOUL.md  analysis.ipynb  big_model_eval.py  download_data.py  eval.py  eval_cf_real.py  eval_leetcode.py  main.py  program.md  progress.md  pyproject.toml  requirements.txt  start.py  start.sh  test_eval.py  test_eval2.py  train.py  train_policy.py  transformer.py
.claude/skills/pua/: SKILL.md
.openclaw/: workspace-state.json
bank/: __init__.py  model_bank.py  persistence.py
big_model/: chat.py  encoder.py  lora.py  pretrain.py  transformer.py
consolidation/: __init__.py  clusterer.py  consolidator.py  distiller.py
core/: __init__.py  answer.py  problem.py  registry.py
curriculum/: __init__.py  feeling.py  generator.py  lora_trainer.py  trainer.py
data_generators/: __init__.py  arithmetic.py  base.py  binary_tokenizer.py  competition_math.py  corpus_loader.py  pattern_inferrer.py  pattern_matching.py  rule_generator.py  selector.py  sequence_prediction.py  text_generator.py
knowledge/: summary_attention_residuals.md
memory/: 2026-03-19.md
policy/: __init__.py  rl_trainer.py  sft_trainer.py
router/: __init__.py  encoder.py  model_index.py  router.py  similarity.py
system/: __init__.py  lora_pipeline.py  pipeline.py
tests/: test_curriculum.py  test_feeling.py  test_model_bank.py  test_pipeline.py  test_router.py  test_tiny_model.py
tiny_model/: __init__.py  model.py
