[project]
name = "mulmodel"
version = "0.1.0"
description = "Train BigModel on code data with byte-level tokenizer + flash attention"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.7.0",
    "transformers>=5.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

